@@ -395,7 +395,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 #content article {
 	display:block;
 	clear:both;
-	margin-bottom:40px;
+	margin-bottom:30px;
 }
 .entry-meta {
 	margin: 0 0 15px 0;
@@ -783,18 +783,20 @@ figure {
 }
 #content nav .nav-previous, #portfolio nav .nav-previous {
 	float: left;
-	width: 40%;
 }
 #content nav .nav-next, #portfolio nav .nav-next {
 	float: right;
 	text-align: right;
-	width: 40%;
 }
 #nav-below {
+	text-shadow: 0px 1px 1px white;
 	clear:both;
 	font-family: 'Rokkitt', serif;
 	font-size:16px;
-	margin: 15px 0 0 0;
+	margin-bottom:30px;
+}
+#portfolio #nav-below {
+	padding-top:15px;
 }
 .page-link {
 	margin: 0 0 15px 0;
@@ -805,12 +807,10 @@ figure {
 .single-portfolio #content nav .nav-previous {
 	float: right;
 	text-align: right;
-	width: 50%;
 }
 .single-portfolio #content nav .nav-next {
 	float: left;
 	text-align: left;
-	width: 50%;
 }
 
 /* Widgets */
